<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_background"
    android:orientation="vertical"
    android:padding="@dimen/padding_large" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/borda_1"
        android:orientation="vertical"
        android:padding="@dimen/padding_large" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="200dp"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:layout_marginTop="60dp"
            android:contentDescription="@string/lb_img_login"
            android:padding="@dimen/padding_small"
            android:src="@drawable/original" />

        <TextView
            style="@style/TextBoxShadow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:focusable="false"
            android:text="@string/app_name_full_name"
            android:textIsSelectable="false" />

        <TextView
            style="@style/TextBoxShadow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:focusable="false"
            android:text="@string/app_versao"
            android:textIsSelectable="false" />

        <TextView
            style="@style/TextBoxShadow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:focusable="false"
            android:text="@string/app_copyright"
            android:textIsSelectable="false" />

        <TextView
            style="@style/TextBoxShadow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:focusable="false"
            android:text="@string/app_todos_direitos"
            android:textIsSelectable="false" />
    </LinearLayout>

</LinearLayout>