<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/idRegistro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:focusable="false"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/txtCancelamentoAgendamentoSenha"
        style="@style/TextBoxShadow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:focusable="false"
        android:text="@string/lb_senha"
        android:textIsSelectable="false"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtCancelamentoAgendamentoSenhaValor"
        style="@style/TextBoxShadow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:focusable="false"
        android:padding="@dimen/padding_small"
        android:textIsSelectable="false" />

    <TextView
        android:id="@+id/txtCancelamentoAgendamentoData"
        style="@style/TextBoxShadow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:focusable="false"
        android:padding="@dimen/padding_small"
        android:text="@string/lb_agendamento_data"
        android:textIsSelectable="false"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtCancelamentoAgendamentoDataValor"
        style="@style/TextBoxShadow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:focusable="false"
        android:padding="@dimen/padding_small"
        android:textIsSelectable="false" />

    <TextView
        android:id="@+id/txtCancelamentoAgendamentoUnidadeAtendimento"
        style="@style/TextBoxShadow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:focusable="false"
        android:padding="@dimen/padding_small"
        android:text="@string/lb_agendamento_unidade_negocio"
        android:textIsSelectable="false"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtCancelamentoAgendamentoUnidadeAtendimentoValor"
        style="@style/TextBoxShadow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:focusable="false"
        android:padding="@dimen/padding_small"
        android:textIsSelectable="false" />

</LinearLayout>